Local connection to database successful, able to see all tables created

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": null,
-    "Key": null
-  }
+    "Issuer": "http://localhost:5007",
+    "Key": "u7x!A%D*G-KaNdRgUkXp2s5v8y/B?E(H"
+}
+
   
 }
